--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -20,3 +20,19 @@
 .itemContainerDetails h3 {
     color: #cd9341;
 }
+
+.btn-toCart {
+    width: 100px;
+    background-color: #cd418e;
+    color: white;
+    border: none;
+    border-radius: 7px;
+    padding: 5px;
+    font-size: 19px;
+    cursor: pointer;
+}
+
+.btn-toCart:hover {
+    background-color: #585858;
+    color: white;
+}
