--- a/src/components/CartDetail/CartDetail.css
+++ b/src/components/CartDetail/CartDetail.css
@@ -6,7 +6,8 @@
 }
 
 .btn-deleteItem {
-    background-color: #585858;
+    background-color: #cd4141;
+    transition: background-color .5s;
     width: 50px;
     color: white;
     border: none;
@@ -17,22 +18,6 @@
 }
 
 .btn-deleteItem:hover {
-    background-color: #cd4141;
-    color: white;
-}
-
-.btn-buyItem {
     background-color: #cd9341;
-    width: 80px;
-    color: white;
-    border: none;
-    border-radius: 7px;
-    padding: 5px;
-    font-size: 19px;
-    cursor: pointer;
-}
-
-.btn-buyItem:hover {
-    background-color: #41cd8c;
     color: white;
 }
