--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -7,6 +7,7 @@
 
 .btn-emptyCart {
     background-color: #585858;
+    transition: background-color .5s;
     width: 85px;
     color: white;
     border: none;
@@ -23,4 +24,45 @@
 
 .cartTitle {
     color: #cd418e;
+}
+
+.formContainer {
+    display: flex;
+    justify-content: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+}
+
+input {
+    margin: 10px;
+}
+
+.btnEndPurchaseContainer {
+    display: flex;
+    justify-content: center;
+}
+.btn-buyItem {
+    background-color: #cd9341;
+    transition: background-color .5s;
+    width: 200px;
+    color: white;
+    border: none;
+    border-radius: 7px;
+    padding: 5px;
+    font-size: 19px;
+    cursor: pointer;
+}
+
+.btn-buyItem:hover {
+    background-color: #41cd8c;
+    color: white;
+}
+
+.btn-buyItem:disabled {
+    background-color: #585858;
+    opacity: 0.3;
 }
