--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -35,7 +35,7 @@ li {
 
 .menuLinks:hover {
     color: #cd9341;
-    text-decoration:underline;
+    text-decoration: none;
 }
 
 .menuLinks.active {
